# cambc26

./: .gitignore  README.md  autoscrim.py  benchmark  cambc.toml  runner.py  submit  tst.py
.claude/: settings.local.json
autoscrim/: Games_Blue_Dragon.csv  autoscrim.py  (+8 more)
rust_source/cambc-1.2.0/: PKG-INFO  pyproject.toml
rust_source/cambc-1.2.0/cli/: .gitignore  Cargo.toml  build.rs
rust_source/cambc-1.2.0/cli/src/: lib.rs
rust_source/cambc-1.2.0/engine/rust/: Cargo.toml  build.rs
rust_source/cambc-1.2.0/engine/rust/src/: cli.rs  common.rs  game.rs  game_map.rs  lib.rs  main.rs  map_loader.rs  proto.rs  runner.rs
rust_source/cambc-1.2.0/engine/rust/src/bindings/: controller.rs  mod.rs  py_convert.rs
rust_source/cambc-1.2.0/engine/rust/src/game/: build.rs  distribute.rs  turret.rs
rust_source/cambc-1.2.0/engine/rust/src/replay/: mod.rs  proto_conversions.rs  recorder.rs
rust_source/cambc-1.2.0/engine/rust/src/runner/: watchdog.rs
rust_source/cambc-1.2.0/python/cambc/: __init__.py  _types.py  api.py  auth.py  cli.py  config.py  version_check.py
rust_source/cambc-1.2.0/python/cambc/commands/: init.py  login.py  logout.py  map_editor.py  match_detail.py  matches.py  run.py  starter.py  status.py  submit.py  teams.py  test.py  test_matches.py  test_run.py  watch.py
rust_source/cambc-1.2.0/python/cambc/data/: starter_bot.py
rust_source/cambc-1.2.0/python/cambc/data/visualiser/: index.html  map-editor.html
rust_source/cambc-1.2.0/python/cambc/data/visualiser/assets/: app-DFAl3wtf.js  app-DVndr80Y.css  main-BLQeR3qq.js  map-editor-Bam3bnLZ.js
(+1125 files in other folders)
